--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -1096,7 +1096,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "## a directed graph or digraph!\n",
+        "G = nx.DiGraph()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1104,7 +1105,135 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "UEDxTwbVl5Ft",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "G.add_edges_from([(1,2),(1,3),(1,4),(2,3)])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "18p9Z1X-mdtK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 248
+        },
+        "outputId": "82637202-b104-42bd-c5be-e6b830b06e7f"
+      },
+      "source": [
+        "plot_graph(G)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAV0AAADnCAYAAAC9roUQAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAGH5JREFUeJzt3XmYltWd5vHvgapCrEJbcYmmFVvD\nNBm0TXoiabf4w4UQATfA1nLfYuzEaBxHSJuljSaBjmNijDqdxHSmEyvpEeNGIuL2uyZj90R0kglg\nomIkRsGoqAiIUMDpP84jYSmginrf57zL/bkuL+Bd6r0LL29PPWd5QowREREpx4DcAUREmolKV0Sk\nRCpdEZESqXRFREqk0hURKZFKV0SkRCpdEZESqXRFREqk0hURKZFKV0SkRCpdEZESqXRFREqk0hUR\nKZFKV0SkRCpdEZESqXRFRErUkjuASEPrCi1AO7Cczrg2dxzJL+jOESIV1hUGAZOBKcBIoBtoBeYD\n04E76Iyr8gWUnFS6IpXUFUYB99/5OINvfYjBz74Mb6+GfYbCaX8Dl41l2aBWuoGxdMY5ueNK+VS6\nIpXSFQ4BHgXav+fw0hvwgWGw82B4ciF89V44+wi4/gwAVgCjVbzNR6UrUgnpksIiYNctveRLP4Fv\nPwJ/uAlCAOB1YG9damguWr0gUhmTSddtt2jXDujeeCqtDZhUxUxSg1S6IpUxBRiy6YNr18HK1fDv\nz8KtD8EFtn6UC9ABTC0votQCXV4Q6a+uMJC0QiFs+tTun4BV3en3px8Gt54HAzYe6kSgVcvJmofW\n6Yr0XwepdNs2feKhz6bVC08+D9PuhSsHwQ1nbvSSNcX7l5aSVLJT6Yr033K2cD334GHp10OHw9AO\nuPg2uHQM/MUe61/SUrxfmoSu6Yr0V7o0MH9bLzt43/Trwlc3enj+ppcWPHjw4JuNmqUxaKQrUhnT\ngVvoYTLtXf93Qfp1v93XP7QMmObBjwH+hXSJAmAw8BppN5s0GJWuSGXcAdz47h9O/jqMfj+8/70w\ncEAq3G8+ABNHbXRpoRuYQZqAWw4ML36/Fri11PRSGq1eEKmUDXakXXcX3PdL+P1r0DIgFe2Zh8P5\nR0FrGupstCPNgw8BHgdGkAr4acCB71i0pzN8N1IlKl2RSkrFO4s0sdbTpYZl0PPZCx58T2AOsAA4\nFjgauBAYSrr8MMOiraxeeCmDSlek0tKW4EmkjQ8jScvCWoB5pGu/M7a09deDDwMGWrTfbfDY7sDZ\nwETgSdLo99dV/R6kalS6IhXiwScAt1i0fdY/mDZOdFCB83Q9eACOAC4C9gFuB35s0bTkrI6odEX6\nqbge+11gPLDKom3x0JsKfuYuwBnAacBTwHeAJyya/oOucSpdkX7w4B8mrVzYi3QJYYFFG17i5wfg\nENLodwTwY+B2i/ZmWRmkb7RkTKR/3iGtRHh39LKmzA8vRraPA48XI+7TgLs9+O9Jo9/HNPqtLRrp\nivSTBz8Y+D6wB/CiRftw3kTrM10E/DVpLfC/WLTX8qYSUOmK9Evx4/3PgMuBF4FhFu2pvKn+xIMP\nJq2kOJu0y+27wKMWbV3WYE1MpSvSD8WKhWMs2uW5s2yLBx9BWvd7OHAv8H2Ltjhvquaj0hXZTsWh\nNA6Mt2ivZ47Tax58EHAicC6wErgNeMCi6UzfEqh0RbaTB78MiBbtm7mzbC8Pvj9wAXAMaSfd9yza\nC3lTNTaVrsh28OBDgfuAoyxa97ZeX+s8eAswDjifdOTr94CZjfC91RqVrsh28ODfBGZbtJm5s1Sa\nB/9zUvkeTzrA57sW7bm8qRqHSlekj4oJqRuAcY28BtaDDwSOI02+dZCWxd1l0XTL+H5Q6Yr0kQe/\nB/icRZubO0tZihPQzgVOAv6ddOjOb7KGqlMqXZE+8ODHAZMs2sW5s+RQrEs20uh3T+AHwB0W7e2c\nueqJSlekl4rJJgcmWrQ/Zo6TXTGZeBYwGfgVafT7q7ypap9KV6SXPPjFwM4W7R9zZ6klxej3UNK2\n4/2BLuBHFu2trMFqlEpXpBc8+M6kdaymiaQtK/6eOoHTgWdJh+78opEnHPtKpSvSCx58OjDHos3I\nnaVeePC/Jo1+DwL+F/DDetq5Vy0qXZFtKHZt/RMwRiO2vvPg7cCpwJnAYtLo938369+lSldkGzz4\nvwJfs2hP5M5S7zz4gaSVD6OAu4D/adFeyZuqXCpdka3w4EcCF1i0c3NnaSQefAfgFOAcYCnpyMmH\nmuHISZWuyBZ48AGkbbCdFu2l3HkalQcfThr9HgXMBP65kf++VboiW+DBzwH2s2jX5M7SDIqjMicA\n55Fue3QbcL9F2/5bIHWFFqCdCtyNuVJUuiI9KCZ/HgGOtmgrcudpNh58P9KhO2OAB4HbLNrC3rx3\n5x3D5L3+jP+6ag0fXLmatvftSbxsLEz+MPOB6cAddMZsy/5UuiI98ODXkO7s+4PcWZpZsQtwLOnM\n30HAPwP3WLTVPb6hK4yya3ls2G7EEz9E69AOmD0XbnoAvtYJFx/DMqAbGEtnnFPW97Ehla7IJoqj\nDX9IGuU2/MROvfDge5MuPUwAfk7advzM+hd0hUOAR5cso33okI3fe/634fHnYN709Q+tAEbnKN4B\nZX+gSB34CnC1Cre2WLRFFu3LwGHAbOBaD/6gBz9zwfGffHfH4GaFC3DwvvDymxs91A7MoisMqnrw\nTbSU/YEitcyDjwJaLdpjubNIz4r/GT4IPOjB9wDOXrem5Ym1q1uHDGzr+UYXjz8H79tzs4fbSHdK\nvr2KcTejywsiheLglgeBC3s7aSO1Id4e5obAgT0950/BiTfALefBGYdv9vQ8OuNBVQ+4AV1eEPmT\nyaTzFRbmDiJ90BUGhsDInp564TW44Dsw7gM9Fi7ASLrCwKrm24QuL4iwfofUFaQlSlJfOkgrEto2\nfPCNFXDKN2CfoXDbx7f43jXF+5dWNeEGNNIVSS4nrQXVGbA1yoO3buGp5cBGz61cDZNvhNVr4I5P\nw+C2LbwzDTyXVy7ltmmkK03Pg78HGE/ahiq161cefBdgGfAC8Bbw9xbj03SF+ZCu6a5ZC2fdAs+9\nAg99Fnbfaatfc37ZO9U00hWBa4EvWrSa2CYqW/QwsBfwn4Bji3/eKZ6bTipjrvhh2hAxZTy8vhzm\nPPenf1ZtvLhhGTCttPQFjXSlqXnwg4HdLNrDubPI5jz4jsDxpKVd7yNtatgRWAAcbtFeLV56B3Aj\nwMPz0wNX/WjzrzdvOuy72/o/dgOlH0qvJWPStIolYj8DLttoZ5Nk5cE7gHGkot2D9O/oTuA5YCFp\ndHvEBoWbFDvSSBsftiXbjjSNdKWZTQB+q8LNz4PvRLquPhHYFfgpcJVFe36T150DzLNor232RTrj\nHLrCaNLOtFagh71pOntBJIviGEEHxlm0NzLHaUoe/M9I/+ObSCrImcCdFu2Ffn3htLV3EjAVGEla\nFtYCzCNd+52hU8ZESubBLwfWWrSbcmdpJh58V+AE0l0jdgTuBX5i0V6sygemjQ8d6DxdkXw8+FDg\nPuAoi9bzZn2pGA++G3AiqWhbgXtIRbs4a7BMdE1XmtEXgS+rcKunOIjmJOBkIAB3A+dbtD9mDVYD\nVLrSVDz4COAA0oy4VFCxyeRkUtmuId3t9+zNVhk0OZWuNJtpwBSLputqFVAcLH4K6fLBO8BPSDfy\nXJI1WA1T6UrT8OBjgJct2rzcWeqZB9+HtOJgAuncgjuBU7UKpHdUutIUinttfZH046/0kQcfRlqG\nNR54g1S0p1i00k7nahQqXWkWF5JuaPhK7iD1woPvTyra44HXSFtmT7Boy7IGq3MqXWl4Hnxn4Fx0\nitg2efDhpKL9GLCYVLTjLVqpxx82MpWuNIOrgestWrZdSLWsWNExCfgo8AdS0d5o0d7OGqxBqXSl\noRU/In8QmJI7Sy3x4CNJRXsc8DypaK+3aO9s9Y3SbypdaXTTgKnNvkSsOFHtIFLRHgM8SzoOcZp+\nAiiXSlcalgf/CPC2RXsyd5YciqL9AKloRwO/IRXtdRZtdc5szUylKw3Jgw8g3RHi9NxZylQU7X8h\nFe1RwFxS0f6Dtj3XBpWuNKqzgIct2qLcQaqtKNpRpKI9Avgl6Rrt5yzampzZZHMqXWk4HrwduAQ4\nOneWailG8n9DKtpDgSdIRTtV93qrbSpdaURXAd9qtCVPHnwgcBipaEcBvyAV7ZUWbV3ObNJ7Kl1p\nKMW5AB8BrsmdpRKKoj0SmEy6VvtvwI+Bz6ho65NKVxrNV0jXMuu2kIpzIo4iFe3BwM+B7wOfaval\nb41ApSsNw4OPAlot2mO5s/SVB28lXYOeBBxIun/bt4Ffqmgbi0pXGkIxg/9V4ILcWXqruDnmMaQR\n7QjgEeBbwK9VtI1LpSuN4lTgcYu2MHeQrfHgg4AxpBHtAcBDwA3AfBVtc1DpSt3z4DsAnyGVWc3x\n4INJh8lMAoYBs4HpFu2prMEkC5WuNILPALdZtLdyB3mXB9+RdDziJOC9wCzgWov2dNZgkp1KV+pa\ncTPE4wHLHAUP3kHKMgnYA7gf+LxFW5A1mNQUla7Uu2uBL+baheXBh5BuYTMR2JV0l+EpFu35HHmk\n9ql0pW558IOBoRbtkZI/d2fSTRknAjsBM4ErLNoLZeaQ+qTSlbpULBGbBlxW0uftApxAKtrBwH3A\npRbtxTI+XxqHSlfq1QTgtxbtmWp9gAcfCpwInAK0AfcAF1u0xdX6TGl8Kl2pO8Wmgs+SJq0q/bV3\nB04i3ap9AHA3cIFF+2OlP0uak0pX6tEngS6L9kYlvpgH35M0mj0JWAPcBZxj0V6txNcX2ZBKV2pb\nV2gB2oHldMa1xY/8k+nn7dQ9+N6koj0BWA38BOi0aEv6mVhkq0KM2nkoNaYrDCIV6xRgJNANtALz\nn59x7uJFD59w8+FLT76nr1/Wg/85aSJsArACuBO4r1IjZpHeUOlKbekKo4D7F7xM202z6Xj8OfjN\nIjhsOPzsKli7qm3NgLbVb4XAWDrjnG19OQ8+jFS044E3SUU706Itre43ItIzXV6Q2tEVDiGdtNX+\n9GKYPRcO2R+6N9j2MHDQ6hbSJoRH6QqjeypeD/4XpF1hxwOvkYr2RIu2rITvQmSrNNKV2pAuKSwi\nFSrr1sGAAemps26BJcvTSHcTrwN70xlXefD3kYr2Y8DLpNvY3G/RlpeSX6SXNNKVWjGZdN0W+FPh\nbk1cFwb94ad/+4PfneHvAV4kFe03G+3eaNJYVLpSK6YAQ/ryhjAgtu999H2jfvfji0dYtHeqlEuk\nonoxnhCpsq4wkLRKoc9a2lfsa7eP7q5wIpGqUelKLeggLQvbHmuK94vUBZWu1ILlbHA9t49aiveL\n1AWVruTXGdcC87fz3fOL94vUBZWu1IrpcV3o66qDZaTjHUXqhlYvSHYefODAwTOHHXrTqa0tg1Pv\nrlwND/w6Pb/oTVi2Eu5+Iv35o38Fg9uAdB14RobIIttNpStZefB9gO+uXdn+4ICW7iModqS9+hac\nfevGr333z/Omw767sQIYS2dcVW5ikf7RjjTJxoNPJt3J91MW7f8B724FnkWaWOtp3e4y0gi3V2cv\niNQala6UrriZ442kIxWv2GwHWdoSPAmYSlq/u4b0U9k8YDowQyNcqVcqXSmVB/8w8A1gmkXb9vGM\naeNEB8V5ulWOJ1J1Kl0phQcfSBq5HgZcqPuMSbPSkjGpuuJM21nA28AEFa40M61ekKry4KcBlwJ/\nZ9H+f+48IrmpdKUqPPhOwE2k1QbHWrSVmSOJ1ASVrlScBz8U+DpwnUWbmTuPSC1R6UrFePAW4Grg\nQ8BJFu3lzJFEao4m0qQiivuSPQC8AZygwhXpmUa60m8e/EzgE8AlFm1u7jwitUylK9vNg+8M3Aws\nAY7TZJnItql0Zbt48COA64FrLNr9ufOI1AuVrvSJB28FvgAcRLp2+0rmSCJ1RRNp0mse/ABgNrAY\nOFmFK9J3GunKNnnwAJwDXAhcbNG299Y6Ik1PpStb5cF3AW4FXgKOsWg6UlGkH1S6skUe/CjS+bVf\nsGizc+cRaQQqXdlMMVl2DTACGG/RXsscSaRhaCJNNuLBhwMPAr8HJqpwRSpLI10B1k+WnU+aMPu4\nRftt5kgiDUmlK3jwXYH/ASwk7SzTZJlIlah0m5wHPxr4CnC1RXs4dx6RRqfSbVIevA24DtgfGGfR\nlmSOJNIUNJHWhDz4COAh4BlgsgpXpDwa6TaRYrLsIuAM0h15n8kcSaTpqHSbhAffDfg28DRpsmx1\n5kgiTUml2wQ8+HGk67dTLJpnjiPS1FS6DcyDDyKtTHgvMNaivZE5kkjT00Rag/Lg/5k0WTYXOF2F\nK1IbNNJtMMVk2SXAZOA8i7YgcyQR2YBGug3Eg+8B3AXsBYxR4YrUHo10G4QHH0s6GexKi/bz3HlE\npGcq3TrnwXcApgG7Ax+1aG9mjiQiW6HLC3XMgx9Imix7AjhThStS+zTSrUPFZNmngJOBsy3a7zJH\nEpFe0ki3znjwPYF7gaGkyTIVrkgd0Ui3jnjwccDngSss2r/lziMifafSrQMefDDwNWBn0mTZ0syR\nRGQ7qXRrnAc/GLgFuNmideXOIyL9o9KtUR58AHAZMA44w6ItzJtIRCpBE2k1yIPvBdwHtJMOqlmY\nN5GIVIpGujXGg58A/D1wmUX7Re48IlJZKt0a4cF3BP47sAPpkPFlmSOJSBWodGuAB/8gcDNwo0X7\n19x5RKR6VLoZFZNlVwBjgNMs2guZI4lIlWkiLRMP/l7gp0Ar8DEVrkhz0Eg3Aw9+MnAV8GmLNid3\nHhEpj0q3RB68HfgGEEiTZcszRxKRkql0S+LBPwTcBFxv0e7MnUdE8lDpVpkHHwhcCYwGJlu0FzNH\nEpGMNJFWRR58H+BnwDrgeBWuiGikWyUefBJpOdilFu3J3HlEpDaodCvMgw8BbgRWkybLVmSOJCI1\nRKVbQR58FKlwp1m0e3LnEZHao9KtgGKybCpwODDRoi3KHElEapQm0vrJgw8DZgErgfEqXBHZGo10\n+8GDnwZcCnzSov0qdx4RqX0q3e3gwXcibXRYTposeztzJBGpEyrdPvLghwI3AF+2aDNz5xGR+qLS\n7SUP3kK6o8MhwMkW7eXMkUSkDmkirRc8+H6kybI3gRNVuCKyvTTS3QYPfgZwCXCJRZubO4+I1DeV\n7hZ48J1Jt9BZQposW5k5kog0AJVuDzz44aSbRF5j0e7PnUdEGodKdwPFZNnngQ8AJ1i0VzJHEpEG\no4m0ggc/AJgNvAKcpMIVkWpo+pGuBw/AWcBFwCcs2vzMkUSkgTV16XrwXYBbgMXAsRZtVeZIItLg\nmrZ0PfhHgH8EvmDRZufOIyLNoelK14O3Av8AvB+YYNFezZtIRJpJU02kefDhpMmyF0jn3qpwRaRU\nTTHSLSbLzgPOBT5u0X6bN5GINKuGL10PvitwK/B70s4yTZaJSDYNXboefDTwVeBqi/Zw7jwiIg1Z\nuh68DfgScAAwzqItyRxJRARowIk0D/6XwIPAAuBUFa6I1JKGGekWk2UXAmcAF1m0ZzJHEhHZTEOU\nrgcfCvwT8CwwxqKtzhxJRKRHdVm6HrwTONKiXeLBjwWuA6ZaNM+bTERk60KMMXeGPikmyRYAQ4BH\ngG7SXR3eyBpMRKQXamuk2xVagHZgOZ1x7RZe9Wlgd2AH4GjgL1W4IlIv8q9e6AqD6Apn0hXmAqtf\nep1X3vN3rOnYIaz9w03hArrCoHdf6sE7gC+QCjcCbaRb6oiI1IW8pdsVRgGLSMcrHgiEz8+grWMH\nGBAYsEs7XwcW0RUOKd5xKrAC+BFwGTAOuDhDchGR7ZLvmm4q0kdJlxMAeOxpOP1muPJ4+NwdsPhm\naN8BSEU7ms44J09YEZHKyDPSTZcMZrFB4a5dB//tRzB1Agwdstk72oFZG15qEBGpR7kuL0wGWjd8\n4DaHVd1w0egtvqcNmFTdWCIi1ZWrdKeQlnwB8PpyuO5u+OrfQuuW11N0AFNLyCYiUjXll25XGAiM\n3PChL90Fh+wPY/5qm+8eWbxfRKQu5Vin20Ha0NAG8JuX4Af/B2ZdBUvfTi94uzjxdulKGDAABret\nf++a4v1LS00sIlIhOUp3ORtcz33uj9C9Bo75yuYvHHElnH0kfOvc9Q+1FO8XEalLeZaMpY0QBwIs\nWQZPvbTx0w/Ng6/fD3deDvvtDsPfs/6peXTGg8qMKiJSSbm2AU8nbYgYMnQIHDli4ydfKE7APWz4\n+nW6AMuAaWUFFBGphlyrF+4gXdfti25gRhWyiIiUpqZ2pG2FdqSJSEPIe7RjKt5ZpIm1zfehpUsK\n3cBYFa6INIK8B96kIt0buASYRzo5rLv4dW7x+N4qXBFpFLV1iHna+NDB1s/TFRGpW7VVuiIiDS7/\nIeYiIk1EpSsiUiKVrohIiVS6IiIlUumKiJRIpSsiUiKVrohIiVS6IiIlUumKiJRIpSsiUiKVrohI\niVS6IiIlUumKiJRIpSsiUiKVrohIiVS6IiIl+g/Ti3eG3AIUHQAAAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PL5vJY9rhfI7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f839797a-baa8-4491-fdc5-52cc8e51b76a"
+      },
+      "source": [
+        "G.in_degree()"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "InDegreeView({1: 0, 2: 1, 3: 2, 4: 1})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F9QN7q4mrNvk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e0a779f9-7642-49cd-e85d-d2e60008b658"
+      },
+      "source": [
+        "G.out_degree()"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OutDegreeView({1: 3, 2: 1, 3: 0, 4: 0})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V4IKwO0Ur-fs",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Degree** notions!\n",
+        "\n",
+        "1. For an **undirected** graph $G=(V,E)$, the **degree** $d(u)$ of a node $u \\in V$ is defined as $d(u)=|V_u|$ (number of neighbors!!!).\n",
+        "2. For a **directed** graph $DG=(V,E)$, \n",
+        "  - the **out-degree** of $u$ is the number of outgoing edges, that is, $d_{out}(u)=|\\{v \\in V_u: (u,v) \\in V\\}|$\n",
+        "  - the **in-degree** of $u$ is the number of ingoing edges, that is, $d_{in}(u)=|\\{v \\in V_u: (v,u) \\in V\\}|$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KVBkzjXqwdxg",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Question 9:** ¿$d(u)=d_{out}(u)+d_{in}(u)$?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XesbGzC-wuEq",
         "colab_type": "code",
         "colab": {}
       },
